--- a/pom.xml
+++ b/pom.xml
@@ -34,5 +34,17 @@
             <artifactId>hadoop-auth</artifactId>
             <version>2.7.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.mahout</groupId>
+            <artifactId>mahout-core</artifactId>
+            <version>0.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.mahout</groupId>
+            <artifactId>mahout-math</artifactId>
+            <version>0.9</version>
+        </dependency>
+
     </dependencies>
 </project>
